--- a/broadway.css
+++ b/broadway.css
@@ -1,6 +1,14 @@
+html,body{
+	margin:0;
+	padding:0;
+}
+
 .nav{
 	background-color: #000000;
 	height: 40px;
+	font-family: 'Raleway', sans-serif;
+	font-weight:600;
+	padding-bottom: 10px;
 }
 
 .nav a{
@@ -31,38 +39,50 @@
 
 .jumbotron{
 	height:700px;
+	position:relative;
 	text-transform: uppercase;
 	background-image: url(https://s3.amazonaws.com/codecademy-content/projects/broadway/bg.png);
+	background-position: center;
 	background-size: cover;
-	border: solid black;
+	border:solid black;
+}
+
+.jumbotron .container{
+	position:relative;
+	top:180px;
+	text-align:center;
+	margin:0;
+	padding:0;
 }
 
 .jumbotron h1{
-	margin-top: 200px;
-	text-align: center;
-	font-size: 50px;
+	font-size: 70px;
+	font-family:'Raleway','sans-serif'
+	font-weight:600;
 }
 
-.jumbotron h2{
-	text-align: center;
+.primebtn{
 	background-color: #000000;
-	border: solid black;
+	border: 1x solid #333;
 	color:#ffffff;
-	margin-top: 50px;
-	margin-left: 350px;
-	margin-right: 350px;
-	padding-top:10px;
-	padding-bottom:10px;
+	font-family:'Raleway','sans-serif';
+	font-size:18px;
+	font-weight:600;
+	padding:16px 40px;
 }
 
 .jumbotron a{
 	text-decoration:none;
 }
 
-.lowthird .container{
-	display:inline-block;
-	width: 300px;
-	height:200px;
+.lowthird{
+	padding-top:20px;
+	padding-bottom:40px;
+}
+
+.lowthird .column{
+	float:left;
+	width: 33%;
 	text-align:center;
 }
 
@@ -88,7 +108,7 @@
 	border:solid black;
 	border-radius: 2px;
 	border-width: 1px;
-	padding: 5px 30px;
+	padding: 10px 20px;
 }
 
 .footer{
@@ -100,6 +120,10 @@
 	color:white;
 	margin-top: 3px;
 	font-size:12px;
+}
+
+.clearfix{
+	clear:both;
 }
 
 
