--- a/broadway.css
+++ b/broadway.css
@@ -4,11 +4,14 @@ html,body{
 }
 
 .nav{
+	position:relative;
 	background-color: #000000;
 	height: 40px;
 	font-family: 'Raleway', sans-serif;
 	font-weight:600;
+	margin-top:0;
 	padding-bottom: 10px;
+	border:solid black;
 }
 
 .nav a{
@@ -48,7 +51,6 @@ html,body{
 }
 
 .jumbotron .container{
-	position:relative;
 	top:180px;
 	text-align:center;
 	margin:0;
