--- a/innovation_cloud.css
+++ b/innovation_cloud.css
@@ -1,143 +1,157 @@
 html,body{
 	margin:0;
 	padding:0;
+}
+
+body{
 	font-family: 'Roboto', sans-serif;
 	font-weight: 100;
 }
 
-a{
-	background-color: black;
-	color:white;
-	text-decoration: none;
-	padding:10px 30px;
-}
-
-a:hover{
-	background-color:blue;
-}
-
 .container{
-	position:relative;
-}
-
-.header .container{
-	margin-left: 20%;
-	margin-right:20%;
+	margin:0 auto;
+	max-width: 940px;
+	padding:0 10px;
 }
 
 .header{
 	background-image: url(https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/bg.jpg);
-	background-position: center;
+	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	height:800px;
+	text-align: center;
+}
+
+.header .container{
+	position:relative;
+	top:200px;
 }
 
 .header h1{
-	font-size:120px;
-	letter-spacing: 2px;
+	line-height: 100px;
+	font-size:80px;
+	margin-top:0;
+	margin-bottom: 80px;
 	text-transform: uppercase;
-	text-align: center;
-	color:white;
-	padding-top:100px;
-	padding-bottom:20px;
+	color:#ffffff;
+}
+
+@media (min-width: 850px){
+	.header h1{
+		font-size:120px;
+	}
 }
 
 .header p{
-	font-size:18px;
-	font-weight:400;
-	text-align: center;
-	color:white;
-	letter-spacing:5px;
+	font-weight:500;
+	color:#ffffff;
+	letter-spacing:8px;
 	text-transform: uppercase;
-	padding-top:10px;
-	padding-bottom:20px;
+	margin-top:0;
+	margin-bottom:40px;
 }
 
-.header a{
-	text-align: center;
+.btn{
+	color:#ffffff;
+	background:#000000;
+	text-decoration: none;
+	padding:10px 40px;
+	transition: background 0.5s;
 }
 
 .navbar{
-	background-color: black;
-	height:70px;
-}
-
-.navbar a{
-	display:inline-block;
+	background-color: #000000;
+	height:80px;
+	width:100%;
 }
 
 .navbar ul{
-	padding:20px 10px;
-	margin-left:250px;
+	height:80px;
+	margin: 0 auto;
+	padding:0;
 	list-style: none;
 }
 
-.midarea{
-	background-color: white;
-	height:300px;
+.navbar ul li{
+	color:#ffffff;
+	display:inline-block;
+	height:80px;
+	line-height: 80px;
+	list-style: none;
+	padding:0 10px;
+	transition: background 0.5s;
+}
+
+a:hover, .navbar ul li:hover{
+	background: #117bff;
+	cursor:pointer;
+	transition:background 0.5s;
+}
+
+.midarea .container{
+	margin:80px auto;
 }
 
 .midarea img{
-	height:200px;
-	width:200px;
 	float:left;
-	margin-left:250px ;
-	padding:30px 30px;
-}
-
-.midarea h2{
-	font-size:30px;
-	font-weight: 500;
-	color:black;
-	padding:10px 10px;
-	float:left;
-}
-
-.midarea p{
-	font-size:10px;
-	color:black;
-	padding:5px 5px;
-}
-
-.clearfix{
-	clear:both;
+	margin: 50px 80px 50px 0;
+	height:128px;
+	width:196px;
 }
 
 .lowsection{
 	background-image: url(https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/jumbotron_bg.jpg);
-	background-position: center;
+	background-position: center center;
 	background-size:cover;
 	background-repeat: no-repeat;
 	height:600px;
 }
 
 .lowsection .container{
-	top: 200px;
-	text-align: right;
-	margin-right: 300px;
+	position:relative;
+	top: 220px;
 }
 
 .lowsection h2{
-	font-size:25px;
-	color:white;
-	padding:5px 5px;
+	color:#ffffff;
+	text-align: right;
 }
 
 .lowsection p{
-	font-size:15px;
-	color:white;
-	padding:5px 5px;
+	color:#ffffff;
+	text-align: right;
+}
+
+.lowsection .btn{
+	float:right;
+	margin: 10px 0 0;
 }
 
 .footer{
-	background-color: black;
+	background-color: #000000;
+	height:80px;
 }
 
 .footer p{
-	font-size:15px;
-	color:white;
-	padding:10px 5px;
-	text-align: left;
-	margin-left: 400px;
+	font-size:14px;
+	color:#ffffff;
+	height:80px;
+	line-height: 80px;
+	margin:0;
+}
+
+@media (max-width: 500px){
+	.header h1{
+		font-size:50px;
+		line-height: 64px;
+	}
+
+	.midarea, .lowsection{
+		padding: 0 30px;
+	}
+
+	.midarea img{
+		width:100%;
+	}
 }
