--- a/shutterbugg.css
+++ b/shutterbugg.css
@@ -4,8 +4,8 @@ html,body{
 }
 
 h1{
-	font-family: 'Raleway',sans-seriff;
-	font-size: 100px;
+	font-family: 'Helvetica Neue Thin','HelveticaNeue-Thin','helvetica neue',helvetica,arial,'lucida grande',sans-seriff;
+	font-size: 10px;
 	font-weight: 200;
 }
 
@@ -24,13 +24,13 @@ p{
 }
 
 .btn:hover{
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 1px 6px;
 	transition: border-width 0.5s;
 }
 
 .store p{
 	font-family: 'Raleway',sans-seriff;
-	font-size: 18px;
+	font-size: 25px;
 	font-weight: 400;
 }
 
@@ -124,10 +124,6 @@ p{
 .store img{
 	height:60px;
 	width: 180px;
-}
-
-.store p{
-	font-size: 25px;
 }
 
 .footer{
