--- a/red_eye_photography.css
+++ b/red_eye_photography.css
@@ -1,7 +1,7 @@
-/*html,body{
-	margin-top:0;
-	max-width: 940px;
-}*/
+html,body{
+	margin:0;
+	padding:0;
+}
 
 p, li{
 	font-family: 'Josefin+Slab',sans-serif;
@@ -9,7 +9,7 @@ p, li{
 
 .header{
 	text-align: center;
-	height:200px;
+	height:150px;
 }
 
 .header .container{
@@ -18,18 +18,20 @@ p, li{
 }
 
 .header p{
-	font-size: 20px;
-	font-weight: 600;
+	font-size: 40px;
+	font-weight: 700;
 	text-transform: uppercase;
 }
 
 .main{
 	background-color: #bbbbbb;
+	height:600px;
 }
 
 .main .container{
 	position: relative;
 	top:25px;
+	text-align:center;
 }
 
 .main ul{
@@ -50,25 +52,30 @@ p, li{
 
 }
 
+.main img{
+	height:90%;
+	width:90%;
+}
+
+.row{
+	margin-top: 30px;
+}
+
 .row .col-md-4{
 	display:inline-block;
-	padding:10px 10px;
+	padding:5px 5px;
 	text-align: center;
 }
 
-.row img{
-	height:100px
-	width:100px;
-}
-
 .footer{
+	background-color: #bbbbbb;
+	height:225px;
+}
+.footer p{
+	font-size: 12px;
 	text-align: right;
+	font-weight: bolder;
+	margin-right: 20px;
 }
 
-.footer p{
-	font-size: 10px;
-	color:#000000;
-	font-weight: bold;
-	text-transform: uppercase;
-}
 
